--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Random Buzzer</h1>
   <button onclick="startBuzzer()">Start Random Buzzing</button>
+  <button onclick="testBuzz()">Test Now</button>
 
   <script src="script.js"></script>
   <script>
