--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Random Buzzer</h1>
   <button onclick="startBuzzer()">Start Random Buzzing</button>
   <button onclick="testBuzz()">Test Now</button>
+  <button onclick="testBuzzSimple()">Simple Test Buzz</button>
 
   <script src="script.js"></script>
   <script>
