--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <button onclick="startBuzzer()">Start Random Buzzing</button>
   <button onclick="testBuzz()">Test Now</button>
   <button onclick="testBuzzSimple()">Simple Test Buzz</button>
+  <button onclick="testVibrationOnly()">Test Vibration Only</button>
 
   <script src="script.js"></script>
   <script>
