--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Random Buzzer</title>
   <link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <h1>Random Buzzer</h1>
+
   <button onclick="startBuzzer()">Start Random Buzzing</button>
   <button onclick="testBuzz()">Test Now</button>
   <button onclick="testBuzzSimple()">Simple Test Buzz</button>
-  <button onclick="testVibrationOnly()">Test Vibration Only</button>
 
   <script src="script.js"></script>
+
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('Service Worker registered'))
-        .catch(err => console.error('Service Worker failed:', err));
+        .catch(err => console.error('Service Worker registration failed:', err));
     }
   </script>
 </body>
